# skypro_course_6

./: README.md  pyproject.toml  questions.md  requirements.txt
skymarket/ads/: models.py  permissions.py  serializers.py  urls.py  views.py
skymarket/ads/migrations/: 0001_initial.py  0002_auto_20230412_1949.py
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: managers.py  models.py  serializers.py  urls.py
skymarket/users/migrations/: 0001_initial.py  0002_alter_user_last_login.py  0003_alter_user_last_login.py  0004_user_first_name2.py  0005_remove_user_first_name2.py
